--- a/index.Rmd
+++ b/index.Rmd
@@ -9,15 +9,15 @@ author: "Edith Darin, Douglas Leasure"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This website contains the teaching materials for the **Statistical Population Modelling for Census Support workshop,** funded by the [United Nations Population Fund](<https://www.unfpa.org/>). It has been developped at the [WorldPop Research Group](<https://www.worldpop.org/>), University of Southampton.
+This website contains the teaching materials for the **Statistical Population Modelling for Census Support workshop,** funded by the [United Nations Population Fund](<https://www.unfpa.org/>). It has been developed at the [WorldPop Research Group](<https://www.worldpop.org/>), University of Southampton.
 
 It has been first taught to the Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in October 2021.
 
 ## Material
 
 -   [Introduction](tutorials/day1_presentation.html)
--   [Tutorial 1](tutorials/tutorial1_linearRegression.html): How to think like a Bayesian and build a first population model?
--   [Tutorial 2](tutorials/tutorial2_hierarchicalModel.html): How to model large-scale spatial variations?
+-   [Tutorial 1](tutorials/tutorial1/tutorial1_linearRegression.html): How to think like a Bayesian and build a first population model?
+-   [Tutorial 2](tutorials/tutorial2/tutorial2_hierarchicalModel.html): How to model large-scale spatial variations?
 -   [Tutorial 3](tutorials/tutorial3/tutorial3_covariates.html): How to model small-scale spatial variations?
 -   [Tutorial 4](tutorials/tutorial4/tutorial4_diagnosticsPrediction.html): Advanced model diagnostics and prediction
 -   [Conclusion](tutorials/day5_presentation.html)
